--- a/Sistema_Dinha_Kids/Sistema_Dinha_Kids-main/Dinha/Sistema_Estoque/index.html
+++ b/Sistema_Dinha_Kids/Sistema_Dinha_Kids-main/Dinha/Sistema_Estoque/index.html
@@ -19,6 +19,7 @@
     
     <!-- Estilos personalizados para este modelo-->
 <link href="css/sb-admin-2.min.css" rel="stylesheet">
+<link rel="stylesheet" href="css/sb-admin-2.css">
 
 </head>
 
