--- a/Sistema_Dinha_Kids/Sistema_Dinha_Kids-main/Dinha/Sistema_Estoque/tables.html
+++ b/Sistema_Dinha_Kids/Sistema_Dinha_Kids-main/Dinha/Sistema_Estoque/tables.html
@@ -22,6 +22,7 @@
 
     <!-- Custom styles for this page -->
     <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/sb-admin-2.css">
 
 </head>
 
