retornando ao estado normal

--- a/Sistema_Dinha_Kids/Sistema_Dinha_Kids-main/Dinha/Sistema_Estoque/utilities-border.html
+++ b/Sistema_Dinha_Kids/Sistema_Dinha_Kids-main/Dinha/Sistema_Estoque/utilities-border.html
@@ -130,7 +130,7 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.jsp">
+                <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Mesas</span></a>
             </li>
