--- a/Sistema_Dinha_Kids/Sistema_Dinha_Kids-main/Dinha/Sistema_Estoque/404.html
+++ b/Sistema_Dinha_Kids/Sistema_Dinha_Kids-main/Dinha/Sistema_Estoque/404.html
@@ -133,7 +133,7 @@
 
             <!-- Item de navegação - Tabelas -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.jsp">
+                <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Mesas</span></a>
             </li>
