--- a/Sistema_Dinha_Kids/Sistema_Dinha_Kids-main/Dinha/Sistema_Estoque/cards.html
+++ b/Sistema_Dinha_Kids/Sistema_Dinha_Kids-main/Dinha/Sistema_Estoque/cards.html
@@ -132,7 +132,7 @@
             <!--Item NAV - Tabelas
              -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.jsp">
+                <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Tables</span></a>
             </li>
