--- a/SistemaWeb/src/main/resources/static/404.html
+++ b/SistemaWeb/src/main/resources/static/404.html
@@ -77,7 +77,7 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Telas de login:</h6>
-                        <a class="collapse-item" href="login.html">Conecte-se</a>
+                        <a class="collapse-item" href="../templates/login.html">Conecte-se</a>
                         <a class="collapse-item" href="../templates/cadastro.html">Registro</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Outras páginas:</h6>
@@ -208,7 +208,7 @@
                 <div class="modal-body">Selecione "Logout" abaixo se você estiver pronto para encerrar sua sessão atual.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Sair</a>
+                    <a class="btn btn-primary" href="../templates/login.html">Sair</a>
                 </div>
             </div>
         </div>
