--- a/SistemaWeb/src/main/resources/static/dashboard.html
+++ b/SistemaWeb/src/main/resources/static/dashboard.html
@@ -70,7 +70,7 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Telas de login:</h6>
-                        <a class="collapse-item" href="login.html">Conecte-se</a>
+                        <a class="collapse-item" href="../templates/login.html">Conecte-se</a>
                         <a class="collapse-item" href="../templates/cadastro.html">Registro</a>
 
                         <div class="collapse-divider"></div>
@@ -222,7 +222,7 @@
                 <div class="modal-body"> Selecione "Logout" abaixo se vocÃª estiver pronto para encerrar sua sessÃ£o atual.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Sair</a>
+                    <a class="btn btn-primary" href="../templates/login.html">Sair</a>
                 </div>
             </div>
         </div>
