--- a/SistemaWeb/src/main/resources/static/dashboard.html
+++ b/SistemaWeb/src/main/resources/static/dashboard.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Dashboard</title>
+    <title>Dinha Kids - Dashboard</title>
 
     <!--Fontes personalizadas para este modelo-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -36,7 +36,7 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+                <div class="sidebar-brand-text mx-3">Dinha Kids <sup>Dashboard</sup></div>
             </a>
 
             <!-- Divisor -->
@@ -46,7 +46,7 @@
             <li class="nav-item active">
                 <a class="nav-link" href="dashboard.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Painel</span></a>
+                    <span>Dashboard</span></a>
             </li>
 
             <!-- Divisor -->
@@ -70,12 +70,12 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Telas de login:</h6>
-                        <a class="collapse-item" href="../templates/login.html">Conecte-se</a>
-                        <a class="collapse-item" href="../templates/cadastro.html">Registro</a>
+                        <a class="collapse-item" href="/templates/login.html">Login</a>
+                        <a class="collapse-item" href="/templates/cadastro">Cadastrar</a>
 
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Outras Páginas:</h6>
-                        <a class="collapse-item" href="404.html">404 Page</a>
+                        <a class="collapse-item" href="404.html">404 Página</a>
                         <a class="collapse-item" href="blank.html">Página em branco</a>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
 
             <!-- Item NAV - Tabelas -->
             <li class="nav-item">
-                <a class="nav-link" href="../templates/tables.html">
+                <a class="nav-link" href="../templates/tables">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Tabela</span></a>
             </li>
@@ -147,7 +147,7 @@
                     <!-- Linha de conteÃºdo-->
 
 
-
+                    <iframe title="dinhakids" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=888d84b6-236f-409c-aa98-158e5a93dbb2&autoAuth=true&ctid=51dd7d38-6077-4837-aa14-ae43fe8b3eb0" frameborder="0" allowFullScreen="true"></iframe>
 
 
 
@@ -165,17 +165,7 @@
 
 
                             <!-- Sobre a Dinha Kids: -->
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-primary">Sobre a Dinha Kids</h6>
-                                </div>
-                                <div class="card-body">
-                                    <p>SB Admin 2 faz uso extensivo de classes de bootstrap 4 para reduzir
-                                        CSS inchaÃ§o e desempenho ruim da pÃ¡gina.As aulas CSS personalizadas sÃ£o usadas para criar
-                                        Componentes personalizados e classes de utilitÃ¡rio personalizado.</p>
-                                    <p class="mb-0">Antes de trabalhar com este tema, vocÃª deve se familiarizar com o
-                                        Estrutura de bootstrap, especialmente as classes de utilitÃ¡rio.</p>
-                                </div>
+
                             </div>
 
                         </div>
@@ -188,13 +178,7 @@
             <!-- Fim do conteÃºdo principal -->
 
             <!-- RodapÃ© -->
-            <footer class="sticky-footer bg-white">
-                <div class="container my-auto">
-                    <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2020</span>
-                    </div>
-                </div>
-            </footer>
+
             <!-- Fim do rodapÃ© -->
 
         </div>
