--- a/SistemaWeb/src/main/resources/static/dashboard.html
+++ b/SistemaWeb/src/main/resources/static/dashboard.html
@@ -70,8 +70,13 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Telas de login:</h6>
-                        <a class="collapse-item" href="/templates/login.html">Login</a>
-                        <a class="collapse-item" href="/templates/cadastro">Cadastrar</a>
+                        <a class="collapse-item" href="/login.html">Login</a>
+                        <a class="collapse-item" href="/dinha/cadastro/pagina">Cadastrar</a>
+
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Tabelas:</h6>
+                        <a class="collapse-item" href="/categorias/categoria/tabela">Tabela categoria</a>
+                        <a class="collapse-item" href="/produtos/tables/tabela">Tabela produtos</a>
 
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Outras Páginas:</h6>
