--- a/SistemaWeb/src/main/resources/static/dashboard.html
+++ b/SistemaWeb/src/main/resources/static/dashboard.html
@@ -16,6 +16,8 @@
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
+
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     
     <!-- Estilos personalizados para este modelo-->
 <link href="css/sb-admin-2.min.css" rel="stylesheet">
@@ -86,17 +88,6 @@
                 </div>
             </li>
 
-
-
-            <!-- Item NAV - Tabelas -->
-            <li class="nav-item">
-                <a class="nav-link" href="../templates/tables">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Tabela</span></a>
-            </li>
-
-            <!-- Divisor -->
-            <hr class="sidebar-divider d-none d-md-block">
 
             <!-- Toggler da barra lateral (barra lateral) -->
             <div class="text-center d-none d-md-inline">
@@ -184,6 +175,8 @@
 
             <!-- RodapÃ© -->
 
+
+
             <!-- Fim do rodapÃ© -->
 
         </div>
@@ -214,6 +207,7 @@
                     <a class="btn btn-primary" href="../templates/login.html">Sair</a>
                 </div>
             </div>
+
         </div>
     </div>
 
