--- a/SistemaWeb/src/main/resources/static/404.html
+++ b/SistemaWeb/src/main/resources/static/404.html
@@ -202,7 +202,7 @@
                 <div class="modal-body">Selecione "Logout" abaixo se você estiver pronto para encerrar sua sessão atual.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="../templates/login.html">Sair</a>
+                    <a class="btn btn-primary" href="login.html">Sair</a>
                 </div>
             </div>
         </div>
