--- a/SistemaWeb/src/main/resources/static/dashboard.html
+++ b/SistemaWeb/src/main/resources/static/dashboard.html
@@ -200,7 +200,7 @@
                 <div class="modal-body"> Selecione "Logout" abaixo se vocÃª estiver pronto para encerrar sua sessÃ£o atual.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="../templates/login.html">Sair</a>
+                    <a class="btn btn-primary" href="login.html">Sair</a>
                 </div>
             </div>
 
