--- a/SistemaWeb/src/main/resources/static/login.html
+++ b/SistemaWeb/src/main/resources/static/login.html
@@ -30,7 +30,7 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-5 d-none d-lg-block bg-image" style="background-image" src:img ></div>
+                            <div class="col-lg-6 d-none d-lg-block bg-login-image" style="background-image: url('/img/cadastro.jpeg');"></div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
