--- a/SistemaWeb/src/main/resources/static/dashboard.html
+++ b/SistemaWeb/src/main/resources/static/dashboard.html
@@ -69,23 +69,23 @@
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Páginas</span>
                 </a>
-                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Tela de login:</h6>
-                        <a class="collapse-item" href="/login.html">Login</a>
+                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                     <div class="bg-white py-2 collapse-inner rounded">
+                         <!--<h6 class="collapse-header">Tela de login:</h6>
+                         <a class="collapse-item" href="/login.html">Login</a>-->
 
 
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Tabelas:</h6>
-                        <a class="collapse-item" href="/categorias/categoria/tabela">Tabela categoria</a>
-                        <a class="collapse-item" href="/produtos/tables/tabela">Tabela produtos</a>
+                         <div class="collapse-divider"></div>
+                         <h6 class="collapse-header">Tabelas:</h6>
+                         <a class="collapse-item" href="/categorias/categoria/tabela">Tabela categoria</a>
+                         <a class="collapse-item" href="/produtos/tables/tabela">Tabela produtos</a>
 
-                    </div>
-                </div>
-            </li>
+                     </div>
+                 </div>
+             </li>
 
 
-            <!-- Toggler da barra lateral (barra lateral) -->
+             <!-- Toggler da barra lateral (barra lateral) -->
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
             </div>
